# vulkan-example

./: .gitignore  CMakeLists.txt  README.md  cpu.bat  cube.cpp  postprocess.cpp  simple.cpp  stb_image.h  texture.cpp  vertex.cpp  vkApp.cpp  vkApp.h  vkUtils.h
android/: CMakeLists.txt  cube_android.cpp  vulkan_wrapper.h
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: windows.fft
android/app/src/main/assets/shaders/: bloom_final.frag.spv  blur.frag.spv  brightness.frag.spv  contrast.frag.spv  contrast.vert.spv  cube.frag.spv  cube.vert.spv  explosion.comp.spv  particles.comp.spv  particles.frag.spv  particles.vert.spv  simple.frag.spv  simple.vert.spv  smoke.comp.spv  text.frag.spv  text.vert.spv  texture.frag.spv  texture.vert.spv  vertex.vert.spv  vortex.comp.spv
android/app/src/main/cpp/: android_main.cpp  cube.cpp  example_cube.cpp  example_cube.h  example_menu.cpp  example_menu.h  example_postprocess.cpp  example_postprocess.h  graphics_math.h  mesh_data.cpp  mesh_data.h  shared_types.h  shared_utils.cpp  shared_utils.h  text_renderer.cpp  text_renderer.h  vk_android_example.h  vulkan_wrapper.cpp
android/app/src/main/java/com/vulkan/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/shaders/: cube.frag  cube.vert
android/gradle/wrapper/: gradle-wrapper.properties
assets/: pressistance.xiv
examples/: cube.cpp  depth.cpp  graphics_math.h  particles.cpp  particles_explosion.cpp  particles_smoke.cpp  particles_vortex.cpp  postprocess.cpp  simple.cpp  text.cpp  texture.cpp  utils.cpp  utils.h  vertex.cpp
shaders/: bloom_final.frag  blur.frag  brightness.frag  contrast.frag  contrast.vert  explosion.comp  particles.comp  particles.frag  particles.vert  simple.frag  simple.vert  smoke.comp  text.frag  text.vert  texture.frag  texture.vert  vertex.vert  vortex.comp
src/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  vkCommon.h  vkUtils.cpp  vkUtils.h
